# python-patch

./: LICENSE  README.md  pyproject.toml
examples/: main.py
patch/: __init__.py  types.py
