[tool.poetry]
name = "python-patch"
version = "0.0.1"
description = "Make your python smart"
authors = ["Denis Kayshev <topenkoff@gmail.com>"]
license = "WTFPL"

readme = "README.md"

repository = "https://github.com/topenkoff/python-patch"
homepage = "https://github.com/topenkoff/python-patch"

packages = [
    { include = "patch" }
]

classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
